# sdl3-imgui

./: .gitignore  CMakeLists.txt  readme.md
cmake/: Dependencies.cmake  compile-hlsl.cmake  import-std.cmake
src/: CMakeLists.txt  application.cppm  main.cpp  pch.hpp  sdl.cppm
src/shaders/: basic.vs.hlsl
